Back out jdk1.4 only change
git-svn-id: https://svn.apache.org/repos/asf/jakarta/commons/proper/jexl/trunk@136625 13f79535-47bb-0310-9956-ffa450edef68